public/css/stylesheet-override2.css
/* ... */
.container4 {
  padding-left: 5%;
  padding-right: 5%;
  margin-top: 20px;
  margin-bottom: 20px;
}
.ext a {
  color: #fff !important;
  font-weight: 500;
  text-decoration: none;
}

.nodec a {
  text-decoration: none !important;
  color: #fff;
  font-weight: 500;
}

.nodec a:visited {
  color: #efefef;
}
.nodec a:hover {
  color: #99ccff;
}

.d-none {
  display: none !important;
}
.fa.fa-external-link {
  display: none !important;
}

.menu2 {
  list-style: none;
  display: flex;
  justify-content: space-around;
  font-style: normal !important;
}

.menu2 li {
  font-style: normal !important;
}

.menu2 li a {
  text-decoration: none;
  position: relative;
  font-style: normal !important;
}

.menu2 li a::before {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-bottom: 12px solid #ff6a13;
  bottom: -14px;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.menu2 li a:hover::before {
  opacity: 1;
}

#nav2 li a {
  font-size: 1.28em;
  line-height: 1.29em;
  margin-bottom: none;
}

/* ### slider new start */
.options-container {
  display: flex;
  flex-direction: column;
}

.slider-checkbox {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.slider-checkbox + label {
  position: relative;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 0;
}

.slider-checkbox + label:before {
  content: "";
  height: 26px;
  width: 50px;
  background-color: #83d586;
  border-radius: 34px;
  transition: 0.4s;
  order: 2;
}

.slider-checkbox + label:after {
  content: "";
  height: 22px;
  width: 22px;
  background-color: white;
  border-radius: 50%;
  transition: 0.4s;
  order: 2;
}

.slider-checkbox:checked + label:before {
  background-color: #83d586;
}

.slider-checkbox:checked + label:after {
  transform: translateX(24px);
}

.slider-checkbox:focus + label:before {
  box-shadow: 0 0 1px #83d586;
}

.footerrow {
  line-height: 20px;
  list-style-type: none;
  color: #fff;
  font-size: 1em;
}

.footerrow a {
  color: #fff;
}

.footerrow a:hover {
  color: lightblue;
}
.footerrow a:visited {
  color: #e0efec;
}

.wdot-dkgreen {
  color: #007b5f;
}

.icon-img {
  width: 25px;
  height: 25px;
  position: relative;
  bottom: 1px;
}
.icon-box {
  clip-path: circle(45% at center);
}

.map2 {
  background-color: #ffffff;
  border-bottom: 5px solid #007b5f;
  border-left: 1px solid #007b5f;
  border-radius: 4px;
  border-right: 1px solid #007b5f;
  border-top: 1px solid #007b5f;
  box-shadow: rgba(29, 37, 45, 0.15) 0px 1px 1px 1px;
  box-sizing: border-box;
  color: #333333;
  font-family: Lato, sans-serif;
  font-size: 15px;
  height: fit-content;
  line-height: 24px;
  margin-bottom: 16px;
  min-height: 700px;
  padding: 24px;
  background-color: #ffffff;
  border-bottom: 5px solid #007b5f;
  border-left: 1px solid #007b5f;
  border-radius: 4px;
  border-right: 1px solid #007b5f;
  border-top: 1px solid #007b5f;
  box-shadow: rgba(29, 37, 45, 0.15) 0px 1px 1px 1px;
  box-sizing: border-box;
  color: #333333;
  font-family: Lato, sans-serif;
  font-size: 15px;
  height: fit-content;
  line-height: 24px;
  margin-bottom: 16px;
  min-height: 700px;
  padding: 24px;
}
#map2:hover {
  border-color: #777c81;
  border-style: solid;
  border-width: 1px 1px 5px;
  border-color: #777c81;
  border-style: solid;
  border-width: 1px 1px 5px;
}
@media (max-width: 768px) {
  .container3 {
    display: none;
  }
}

dialog {
  z-index: 10;
  margin-top: 10px;
  background: green;
  border: none;
  border-radius: 1rem;
}
dialog::backdrop {
  background-color: hsl(250, 100%, 50%, 0.25);
}

.alerthead {
  font-size: 1.4em;
  padding: 1em;
  font-size: 600;
}

.card {
  border-radius: 15px;
}
/* 
.hero-image {

  max-height: 900px;
  width: auto;
  border-radius: 5px;
  display: block;
} */

.heroimage {
  /* min-height: 400px;
  max-height: 900px;
  width: auto; */
  border-radius: 5px;
}
.headerflex {
  line-height: 24px;
  margin: 0.75em;
  display: block;
  float: left;
  position: sticky;
}

.topnav2 {
  display: inline-flex;
  flex-direction: row;
  color: #fff;
  float: right;
  margin-top: 25px;
  padding-left: 14px;
  padding-right: 14px;
  text-decoration: none !important;
  list-style-type: none !important;
  font-weight: 600;
}

.topnav2 li a {
  text-decoration: none !important;
  font-weight: 500;
}

.nodec a {
  text-decoration: none !important;
}

.navbar-header {
  margin-left: 6%;
}

.navicon {
  float: left;
  padding-top: 0.75em;
}

#nav2 {
  padding-top: 1.25em;
  margin-top: 0.5em;
  margin-left: 5px;
  padding-left: 25px;
  text-decoration: none;
}

#nav2 a {
  text-decoration: none !important;
}

.nav-item {
  font-weight: 700;
  font-size: 1.3em;
  color: #333333;
}

.nav-item a {
  text-decoration: none !important;
}

.navbar-nav {
  justify-content: space-between;
}

.navbar-nav a {
  text-decoration: none !important;
}

#navbar {
  background-color: none !important;
}

.navbar a {
  text-decoration: none !important;
}

@media (max-width: 994px) {
  .left2 {
    /* display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap; */
    display: none;
  }
  .vanishing {
    display: none;
  }

  .card {
    /* min-width: 350px; */
    margin: 12px;
    width: 100%;
  }
}

.project-materials-heading-paddig {
  padding-left: 10px;
}
@media screen and (max-width: 572px) {
  .wdot-dkgreen {
    padding-left: 20px;
  }
}

footer .social-row a {
  border: none;
}

/* ==== Navigation ======= */
#header,
.navwrap {
  z-index: 8888;
  position: static;
}

.navbar a {
  text-decoration: none !important;
}
.header-container,
.nav-container {
  padding-left: 5%;
  padding-right: 5%;
  margin: 0;
}
.navwrap {
  width: 100%;
  margin-top: 1.5rem;
}
#nav2 {
  padding-top: 0.8rem;
  justify-content: flex-start;
}

#navbar {
  justify-content: flex-end;
  padding-right: 5%;
}
/* ... */

